Info section visibility fix

--- a/styles.scss
+++ b/styles.scss
@@ -741,9 +741,12 @@ nav {
     background-size: cover;
     background-position: center;
     height: 100%;
-    position: relative; /* Ensures the background covers the entire section */
+    position: relative; 
     background-color: rgba(0, 0, 0, 0.8);
-        /* Fallback color */
+}
+
+.info-content {
+    filter: drop-shadow(3px 3px 15px #000000);
 }
 
 .info-section {
@@ -752,7 +755,7 @@ nav {
     width: 100%;
     height: 100%;
     padding: 130px 0;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px) saturate(80%) brightness(80%);
 }
 
 .info-form {
